<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001933">


    <TextView
        android:id="@+id/hotelName"
        android:layout_width="wrap_content"
        android:layout_height="75dip"
        android:layout_marginTop="40dip"
        android:text="@string/sign_up_heading"
        android:textColor="#00CCCC"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="258dip"
        android:layout_height="50dip"
        android:layout_marginTop="48dip"
        android:autofillHints="@string/username"
        android:drawableStart="@drawable/ic_signup_user"
        android:drawablePadding="5dip"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotelName" />

    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="253dip"
        android:layout_height="52dip"
        android:layout_marginTop="32dip"
        android:layout_marginBottom="45dip"
        android:autofillHints="@string/card_number"
        android:drawableStart="@drawable/ic_signup_card"
        android:drawablePadding="5dip"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signupPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupUsername" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="250dip"
        android:layout_height="54dip"
        android:layout_marginTop="32dip"
        android:autofillHints="@string/password2"
        android:drawableStart="@drawable/ic_signup_lock"
        android:drawablePadding="5dip"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="301dip"
        android:layout_height="60dip"
        android:layout_marginTop="32dip"
        android:backgroundTint="#009696"
        android:text="@string/sign_up"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />
  
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="37dip"
        android:layout_marginTop="88dip"
        android:text="@string/dont_have_an_account_yet"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="33dip"
        android:layout_marginBottom="60dip"
        android:text="@string/log_in_redirect"
        android:textColor="#00CCCC"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>